<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Herbert Software
 *
 * Serval Herbert Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- map preferences -->
    <PreferenceCategory 
        android:key="preferences_category_map"
        android:title="@string/preferences_title">
    </PreferenceCategory>
    <EditTextPreference 
        android:dialogTitle="@string/preferences_red_button_dialog_title"
        android:key="preferences_red_button"
        android:summary="@string/preferences_red_button_summary"
        android:title="@string/preferences_red_button_title"
        android:inputType="number" />
    <EditTextPreference 
        android:dialogTitle="@string/preferences_green_button_dialog_title"
        android:key="preferences_green_button"
        android:summary="@string/preferences_green_button_summary"
        android:title="@string/preferences_green_button_title"
        android:inputType="number" />
</PreferenceScreen>